--- a/whatsapp-integration/package.json
+++ b/whatsapp-integration/package.json
@@ -28,38 +28,39 @@
   "author": "MCP WhatsApp Bridge Team",
   "license": "MIT",
   "dependencies": {
-    "whatsapp-web.js": "^1.23.0",
-    "qrcode-terminal": "^0.12.0",
-    "express": "^4.18.2",
+    "@types/qrcode-terminal": "^0.12.2",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "node-cron": "^3.0.3",
-    "joi": "^17.11.0",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "node-cron": "^3.0.3",
+    "prom-client": "^15.1.0",
+    "qrcode-terminal": "^0.12.0",
     "rate-limiter-flexible": "^5.0.3",
-    "prom-client": "^15.1.0"
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
-    "@types/jest": "^29.5.8",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
+    "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.16"
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=16.0.0",
